--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,5 +1,8 @@
 <div id="nav">
 	<ul class="no-list row center-xs">
+		<li class="col-md">
+			<%= link_to "Inicio", root_path %>
+		</li>
 		<% @categories.each do |category| %>
 			<li class="col-md">
 				<%= link_to category.name, category %>
