--- a/app/views/wellcome/index.html.erb
+++ b/app/views/wellcome/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Wellcome</h1>
-<%= link_to 'My Blog', controller: 'articles' %>
+<div class="col-xs-12 center-xs">
+	<h1>Wellcome</h1>
+</div>
+<div class="col-xs-12 center-xs">
+	<%= link_to 'My Blog', controller: 'articles' %>
+</div>
 
